--- a/Session3/EFCore - Assignment 3 Base/EFCoreAssignment.API/appsettings.Development.json
+++ b/Session3/EFCore - Assignment 3 Base/EFCoreAssignment.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog=EFCoreMasters_3;Integrated Security=True"
   }
 }
