--- a/Session4/InventoryAppEFCore.API/appsettings.Development.json
+++ b/Session4/InventoryAppEFCore.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog=EFCoreMasters_4;Integrated Security=True"
   }
 }
