--- a/Session4/InventoryAppEFCore.API/InventoryAppEFCore.API.csproj
+++ b/Session4/InventoryAppEFCore.API/InventoryAppEFCore.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\InventoryAppEFCore.DataLayer\InventoryAppEFCore.DataLayer.csproj" />
+    <ProjectReference Include="..\InventoryAppEFCore.Services\InventoryAppEFCore.Services.csproj" />
   </ItemGroup>
 
 </Project>
