--- a/EFCore - Session 10 Base/ExpenseTracker.API/appsettings.json
+++ b/EFCore - Session 10 Base/ExpenseTracker.API/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "ExpenseTrackerDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ExpenseTrackerDB;Integrated Security=True;",
     //TODO: Add ExpenseTrackerTestDB that can be changed per test class
-    //"ExpenseTrackerTestDB": ""
+    "ExpenseTrackerTestDB": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog=ExpenseTrackerTestDB;Integrated Security=True",
+    "CustomTestDB": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog={0};Integrated Security=True;"
   }
 }
