--- a/EFCore - Session 10 Base/ExpenseTracker.API/appsettings.json
+++ b/EFCore - Session 10 Base/ExpenseTracker.API/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ExpenseTrackerDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ExpenseTrackerDB;Integrated Security=True;",
+    "ExpenseTrackerDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog={0};Integrated Security=True;",
     //TODO: Add ExpenseTrackerTestDB that can be changed per test class
     "ExpenseTrackerTestDB": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog=ExpenseTrackerTestDB;Integrated Security=True",
-    "CustomTestDB": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog={0};Integrated Security=True;"
+    "Category": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog=CategoryTrackerTestDB;Integrated Security=True;"
   }
 }
